# mettmail

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  deliver_base.py  deliver_lmtp.py  docker-compose.test-bats.yaml  docker-compose.yaml  exceptions.py  fetch_imap.py  imap_fetch.py  lmtp_deliver.py  mettmail.example.yaml  mettmail.py  noxfile.py  pyproject.toml
.github/workflows/: bats.yml  docker-image.yml  lint.yml  test-python-3.10.yml  test-python-3.8.yml  test-python-3.9.yml
mettmail/: __init__.py  config_schema.py  deliver_base.py  deliver_lmtp.py  exceptions.py  fetch_imap.py  mettmail.py  mettmail_cli.py  mettmail_loop.py
tests/: config.incomplete.yaml  test_deliver_lmtp.py  test_fetch_imap.py  test_fetch_imap_connected.py  test_mettmail.py  test_mettmail_cli.py  test_mettmail_loop.py
tests/bats/: example.bats
tests/bats/mails/: LMTP_HEAD  simple.eml  unicode-base64.eml  unicode-plain.eml  unicode-qp.eml
tests/data/: config.bad-host.yaml  config.incomplete.yaml  success.yaml
