[tool.poetry]
authors = ["spezifisch <spezifisch-gpl.7e6@below.fr>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Framework :: Pytest",
  "Topic :: Communications :: Email",
  "Topic :: System :: Archiving :: Mirroring",
]
description = "Fetch mails from IMAP servers and deliver them to a local user"
homepage = "https://github.com/spezifisch/mettmail"
include = [
  "LICENSE",
]
keywords = ["mail", "email", "imap", "lmtp"]
license = "GPL-3.0-only"
name = "mettmail"
readme = "README.md"
repository = "https://github.com/spezifisch/mettmail"
version = "0.1.1"

[tool.poetry.dependencies]
aioimaplib = {git = "https://github.com/bamthomas/aioimaplib", rev = "d417343"}
click = "^8.0.3"
loguru = ">=0.5.3,<0.7.0"
python = "^3.8.0"
strictyaml = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.2"}
flake8 = "^4.0.1"
isort = {version = "^5.10.1"}
loguru-mypy = "^0.0.4"
mypy = "^0.930"
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
mettmail = "mettmail.mettmail_cli:run"

[tool.black]
line-length = 119

[tool.coverage.run]
branch = true
source = ["mettmail"]

[tool.coverage.report]
exclude_lines = ["@abstractmethod", "@abc.abstractmethod", "if __name__ == .__main__.:"]
show_missing = true

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "loguru_mypy"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "aioimaplib",
  "strictyaml",
]
strict = true
warn_return_any = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
